<?xml version="1.0"?>
<package>
  <name>gazebo_palletizer</name>
  <version>0.0.0</version>
  <description>The gazebo_palletizer package lets you attach
    by a virtual joint temporarily two links in a Gazebo simulation.</description>

  <maintainer email="g.nabissi@univpm.it">Giacomo Nabissi</maintainer>


  <license>BSD</license>


  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>std_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


</package>
